<resources>
    // Main Strings
    <string name="app_name">Journal Pro</string>

    // Login Strings
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loading">Loading…</string>

    // Menu Navigation Strings
    <string name="nav_home">Home</string>
    <string name="nav_history">Hidden</string>
    <string name="nav_deleted">Deleted</string>
    <string name="nav_signout">Sign Out</string>

    // Layout Name Strings
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="signout">signout</string>
    <string name="title_activity_main3">Journal Entries</string>
    <string name="title_activity_main">My Entry</string>

    // Error Messages string
    <string name="toast_authentication_failed">"Authentication failed."</string>
    <string name="toast_login_success">...</string>
    <string name="toast_login_email_verified">Email Verified Successfully</string>
    <string name="toast_login_already_logged">...</string>
    <string name="toast_login_check_verification_email">...</string>
    <string name="toast_login_verification_failed">Verification Failed, please check email</string>

    // Toast Messages (Other)
    <string name="toast_delete_confirm">Are you sure you want to delete this entry?</string>
    <string name="toast_hide_confirm">Are you sure you want to hide this entry?</string>


    // Layout strings
    <string name="modify">Modify</string>
    <string name="history">History</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="textview">Date</string>

</resources>
